# agntz

./: .gitignore  AGENTS.md  CHANGES.md  Cargo.toml  README.md  RELEASE_SETUP_SUMMARY.md  SETUP.md  justfile
.github/workflows/: release.yml
.pi/todos/: 54374828-03bc-4c89-bcc5-e392162b2831.json
.trx/: ISSUES.md  config.toml  issues.jsonl
.trx/crdt/: agntz-yjqg.automerge
scripts/: README.md  check_sync.sh  setup-aur.sh
src/: issues.rs  mail.rs  main.rs  memory.rs  schedule.rs  tools.rs
tests/integration/: README.md  run_all.sh  test_hstry.sh  test_mailz.sh  test_mmry.sh  test_skdlr.sh  test_trx.sh
