[package]
name = "agntz"
version = "0.3.0"
edition = "2021"
description = "Agent utility toolkit for AI coding agents"
license = "MIT"
repository = "https://github.com/byteowlz/agntz"
homepage = "https://github.com/byteowlz/agntz"
keywords = ["ai", "agent", "cli", "memory", "tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = "thin"
strip = true
